# HyperPS3-android

./: .gitignore  README.md  cmake2.txt  cmake_fail.txt  gradle.properties  gradlew2.out  gradlew3.out  gradlew4.out  gradlew5.out  log_aps3e.txt  log_exec_explanation.txt  log_exec_full.txt  log_real_crash.txt  settings.gradle
app/: build.gradle  build.gradle.bak
app/src/main/cpp/: CMakeLists.txt  aps3e.cpp  aps3e_emu.cpp  aps3e_rp3_impl.cpp  aps3e_rp3_impl.h  emulator_aps3e.cpp  emulator_aps3e.h  glsl2spv.cpp  glsl2spv.h  lang_System.cpp  meminfo.cpp  meminfo.h  vkapi.cpp  vkutil.cpp  vkutil.h
app/src/main/cpp/rpcs3/.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-feature-request.yml  4-advanced.md
app/src/main/cpp/rpcs3/Utilities/: Config.h  File.h  JITLLVM.cpp  stack_trace.cpp  stack_trace.h
app/src/main/cpp/rpcs3/buildfiles/cmake/: ConfigureCompiler.cmake  FindWayland.cmake
app/src/main/cpp/rpcs3/buildfiles/msvc/: rpcs3_default.props
app/src/main/cpp/rpcs3/rpcs3/: CMakeLists.txt  GLGSRender.vcxproj  GLGSRender.vcxproj.filters  VKGSRender.vcxproj  VKGSRender.vcxproj.filters  XAudio.vcxproj  XAudio.vcxproj.filters  emucore.vcxproj  emucore.vcxproj.filters  git-version.h  rpcs3.vcxproj
app/src/main/cpp/rpcs3/rpcs3/Crypto/: aes.cpp  unedat.cpp  unself.h  utils.cpp  utils.h
app/src/main/cpp/rpcs3/rpcs3/Emu/: CMakeLists.txt  GDB.cpp  IPC.h  System.cpp  System.h  localized_string.cpp  localized_string.h  localized_string_id.h  localized_string_id.inc  perf_meter.cpp  system_config_types.cpp  system_config_types.h  system_progress.cpp  vfs_config.cpp
app/src/main/cpp/rpcs3/rpcs3/Loader/: iso.cpp
(+262 files in other folders)
